# Multi-Intent-BART

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  run.sh  run_ood.sh  run_train.sh
configs/: mixatis.yaml  mixatis_t4.yaml  mixsnips.yaml  mixsnips_t4.yaml  multiatis.yaml  multisnips.yaml
notebooks/: 01_EDA_and_Data_Construction.ipynb  02_Model_Training_Tutorial.ipynb
scripts/: calibrate_ood.py  construct_dataset.py  download_data.py  evaluate.py  evaluate_ood.py  train.py
src/gemis/: __init__.py
src/gemis/data/: __init__.py  collator.py  construct.py  dataset.py  tokenizer.py
src/gemis/models/: __init__.py  aoa.py  bart_layer.py  gemis.py  pointer.py  vocab_utils.py
src/gemis/ood/: __init__.py  calibrator.py  scorer.py  synthetic.py
src/gemis/training/: __init__.py  metrics.py  trainer.py
src/gemis/utils/: __init__.py  io.py  training_utils.py
tests/: fast_smoke_test.py  smoke_test.py  test_ood.py
