[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "gemis"
version = "0.1.0"
description = "GEMIS: Generative Model for Joint Multiple Intent Detection and Slot Filling"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["nlp", "slu", "intent-detection", "slot-filling", "bart", "seq2seq"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "tokenizers>=0.19.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",
    "pyyaml>=6.0.1",
    "tqdm>=4.66.0",
    "seqeval>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "black>=24.4.0",
    "mypy>=1.9.0",
    "pytest>=8.1.0",
    "pytest-cov>=5.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "notebook>=7.1.0",
    "ipywidgets>=8.1.0",
    "pandas>=2.0.0",
]

[project.urls]
Homepage   = "https://github.com/ALI-AL-MARJANI/Multi-Intent-BART"
Repository = "https://github.com/ALI-AL-MARJANI/Multi-Intent-BART"
Paper      = "https://arxiv.org/abs/2602.08322"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
